--- a/style.css
+++ b/style.css
@@ -959,6 +959,7 @@ header {
     font-size: 28px;
     font-weight: bold;
     margin-bottom: 10px;
+    font-family: "integral CF bold";
   }
   .brand p {
     font-size: 14px;
@@ -1107,6 +1108,7 @@ header {
     cursor: pointer;
   }
 }
+
 
 
 
