--- a/style.css
+++ b/style.css
@@ -295,7 +295,7 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px 10px;
+  padding: 20px 16px;
   background-color: #000;
   max-width: 100%;
 }
@@ -305,8 +305,8 @@ header {
   display: flex;
   justify-content: center;
   gap: 20px;
-  margin: 10px;
-  flex-wrap: wrap;
+  margin: 10px 0px;
+  flex-wrap: nowrap;
 }
 
 .first-row img,
@@ -1108,6 +1108,7 @@ header {
     cursor: pointer;
   }
 }
+
 
 
 
