--- a/style.css
+++ b/style.css
@@ -432,7 +432,8 @@ header {
   font-size: 48px;
   padding-bottom: 30px;
   color: black;
-  line-height: 100%;
+  line-height: 36px;
+  letter-spacing:0%;
 }
 
 .dress-grid {
@@ -1113,6 +1114,7 @@ header {
     cursor: pointer;
   }
 }
+
 
 
 
